<resources>
    <string name="app_name">Creaarte</string>
    <string name="todo">TODO</string>
    <string name="facebook_app_id">231451317902996</string>
    <string name="fb_login_protocol_scheme">fb231451317902996</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Creaarte</string>
    <string name="nav_header_subtitle">creaarte.creaarte@creaarte.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_menu_main">Comunidad</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_update_profile">Cuenta</string>
    <string name="alert_dialog_update_password">Alerta</string>
    <string name="dialog_password_update2">¿Estás seguro(a) de actualizar la contraseña de tu cuenta?</string>
    <string name="dialog_password_update">Nueva Contraseña</string>
    <string name="dialog_password_update4">Nueva Contraseña</string>
    <string name="text_variable_1">Categoría</string>
    <string name="text_variable_2">descripción de la categoría</string>
    <string name="text_variable_3">Iniciar Sesión</string>
    <string name="text_variable_4">Cree, Crea y Explora</string>
    <string name="text_variable_5">Para aprovechar todas las funciones</string>
    <string name="text_variable_6">disponibles, continúe con nosotros</string>
    <string name="text_variable_7">Continuar con Facebook</string>
    <string name="text_variable_8">Continuar con Google</string>
    <string name="text_variable_9">Continuar con el e-mail</string>
    <string name="text_variable_10">0</string>
    <string name="text_variable_11">X</string>
    <string name="text_variable_12">Tus detalles</string>
    <string name="text_variable_13">¡Empecemos! Ingresa tu e-mail/Nickname y contraseña para iniciar sesión.</string>
    <string name="text_variable_14">E-mail *</string>
    <string name="text_variable_15">Contraseña</string>
    <string name="text_variable_16">¿Olvidaste la contraseña?</string>
    <string name="text_variable_17">Iniciar sesión</string>
    <string name="text_variable_18">¿Aún no tienes Creearte?</string>
    <string name="text_variable_19">Crear cuenta nueva</string>
    <string name="text_variable_20">Categorías</string>
    <string name="text_variable_21">Comunidad</string>
    <string name="text_variable_22">Crear cuenta nueva</string>
    <string name="text_variable_23">Ingresa tus datos para crear una cuenta</string>
    <string name="text_variable_24">Nickname *</string>
    <string name="text_variable_25">Nombre(s)</string>
    <string name="text_variable_26">Apellido Paterno</string>
    <string name="text_variable_27">Apellido Materno</string>
    <string name="text_variable_28">Teléfono</string>
    <string name="text_variable_29">Genero</string>
    <string name="text_variable_30">Confirmar Cotraseña</string>
    <string name="text_variable_31">¿Olvidaste la contraseña?</string>
    <string name="text_variable_32">Proporciona tu correo electrónico registrado y te enviaremos información sobre el modo de restablecer tu cuenta y cambio de contraseña de artzmix.</string>
    <string name="text_variable_33">Nickname o e-mail</string>
    <string name="text_variable_34">Recuperar</string>
    <string name="text_variable_35">Editar</string>
    <string name="text_variable_36">Dirreción 1</string>
    <string name="text_variable_37">Dirección 2</string>
    <string name="text_variable_38">Dirección 3</string>
    <string name="text_variable_39">Nueva Foto</string>
    <string name="text_variable_40">Actualizar</string>
    <string name="text_variable_41">Nueva contraseña</string>
    <string name="text_variable_42">Proporciona una nueva contraseña diferente a la anterior</string>
    <string name="text_variable_43">¿Estás seguro(a) de querer actualizar la contraseña de tu cuenta?</string>
    <string name="text_variable_44">Sí</string>
    <string name="text_variable_45">No</string>
    <string name="text_variable_46">HAz actualizado tu contraseña correctamente.</string>
    <string name="text_variable_47">!Felicitaciones¡</string>
    <string name="text_variable_48">Haz actualizado tus datos correctamente.</string>
    <string name="text_variable_49">Haz actualizado tu imagen de perfil correctamente.</string>
    <string name="text_variable_50">Cancelar</string>
    <string name="text_variable_51">Aceptar</string>
    <string name="text_variable_52">Alerta de permisos</string>
    <string name="text_variable_53">Debe aceptar los permisos para el correcto funcionamiento de la Artzmix</string>
    <string name="text_variable_54">Elige una opción para actualizar tu foto de perfil</string>
    <string name="text_variable_55">Te damos la bienvenida a Artzmix tu lugar favorito de arte.</string>
    <string name="text_variable_56">¡Bienvenido!</string>
    <string name="text_variable_57">Te hemos enviado un correo para poder recuperar tu cuenta registrada en Artzmix.</string>
    <string name="text_variable_58">Una vez que cierres sesión tus datos se borraran dentro de artzmix.¿Estas seguro de querer cerrar sesión?</string>
    <string name="text_variable_59">Se han borrado tus datos correctamente</string>
    <string name="text_variable_60">Nickname</string>
    <string name="text_variable_61">Nombre del arte</string>
    <string name="text_variable_62">Descripción:</string>
    <string name="text_variable_63">Código de registro:</string>
    <string name="text_variable_64">Autor:</string>
    <string name="text_variable_65">Categoría:</string>
    <string name="text_variable_66">Precio: $</string>
    <string name="text_variable_67">Me gusta</string>
    <string name="text_variable_68">Comentar</string>
    <string name="text_variable_69">Necesitas tener una cuenta registrada en artzmix o si ya la tienes puedes ingresar a ella con tu nicknameo correo, y la contraseña correcta</string>
    <string name="text_variable_70">Ingresar</string>
    <string name="text_variable_71">Ignorar</string>
    <string name="text_variable_72">Te gusta</string>
    <string name="text_variable_73">Me gusta</string>
    <string name="text_variable_74">Me gusta</string>
    <string name="text_variable_75">Me gusta</string>
    <string name="text_variable_76">Me gusta</string>
    <string name="text_variable_77">Me gusta</string>
    <string name="text_variable_78">Me gusta</string>
    <string name="text_variable_79">Me gusta</string>
    <string name="text_variable_80">Me gusta</string>
    <string name="text_variable_81">Me gusta</string>
    <string name="text_variable_82">Me gusta</string>
    <string name="text_variable_83">Me gusta</string>
    <string name="text_variable_84">Me gusta</string>
    <string name="text_variable_85">Me gusta</string>
    <string name="text_variable_86">Me gusta</string>
    <string name="text_variable_87">Me gusta</string>
    <string name="text_variable_88">Me gusta</string>
    <string name="text_variable_89">Me gusta</string>
    <string name="text_variable_90">Me gusta</string>
    <string name="text_error_web_servicies_2">Usuario o contraseña incorrectos</string>
    <string name="text_error_web_servicies_3">El correo electronico es invalido</string>
    <string name="text_error_web_servicies_4">El correo electronico está vacío</string>
    <string name="text_error_web_servicies_5">La contraseña está vacía</string>
    <string name="text_error_web_servicies_6">El id de facebook está vacío</string>
    <string name="text_error_web_servicies_7">La cuenta está bloqueada</string>
    <string name="text_error_web_servicies_8">El campo nombre está vacío</string>
    <string name="text_error_web_servicies_9">El campo apellido paterno está vacío</string>
    <string name="text_error_web_servicies_10">El campo apellido materno está vacío</string>
    <string name="text_error_web_servicies_11">El campo género está vacío</string>
    <string name="text_error_web_servicies_12">El campo telefono está vacío</string>
    <string name="text_error_web_servicies_13">El campo tipo de usuario está vacío</string>
    <string name="text_error_web_servicies_14">El campo dirección ip está vacío</string>
    <string name="text_error_web_servicies_15">El campo id de facebook está vacío</string>
    <string name="text_error_web_servicies_16">No se pudo iniciar sesión con facebook</string>
    <string name="text_error_web_servicies_17">El campo nickname està vacío</string>
    <string name="text_error_web_servicies_18">Las contraseñas deben ser iguales</string>
    <string name="text_error_web_servicies_19">No se pudo crear el usuario</string>
    <string name="text_error_web_servicies_20">El nickName ya existe</string>
    <string name="text_error_web_servicies_21">El correo ya existe</string>
    <string name="text_error_web_servicies_22">El campo id del usuario está vacío </string>
    <string name="text_error_web_servicies_23">El campo confirmación de contraseña está vacío</string>
    <string name="text_error_web_servicies_24">El campo número de registros está vacío </string>
    <string name="text_error_web_servicies_25">El campo descripción está vacío </string>
    <string name="text_error_web_servicies_26">EL usuario no existe</string>
    <string name="text_error_web_servicies_27">La contraseña es incorrecta</string>
    <string name="text_error_web_servicies_28">La categoría ya existe</string>
    <string name="text_error_web_servicies_29">El campo id de la categoría está vacío </string>
    <string name="text_error_web_servicies_30">No se encontraron registros </string>
    <string name="text_error_web_servicies_31">El campo disponible está vacío </string>
    <string name="text_error_web_servicies_32">El campo id de google está vacío </string>
    <string name="text_error_web_servicies_33">No se pudo iniciar sesión con google</string>
    <string name="text_error_web_servicies_34">El campo tipo de moneda está vacío</string>
    <string name="text_error_web_servicies_35">El campo tipo de moneda está vacío</string>
    <string name="text_error_web_servicies_36">Ya tienes un articulo con ese nombre</string>
    <string name="text_error_web_servicies_37">Elige un precio adecuado para tu producto</string>
    <string name="text_error_web_servicies_38">El campo id del articulo está vacío</string>
    <string name="text_error_web_servicies_39">El campo reacción está vacío</string>
    <string name="text_error_web_servicies_40">El campo comentario está vacío</string>
    <string name="text_error_web_servicies_41">El género ya exíste</string>
    <string name="text_error_web_servicies_42">El campo id del género ya exíste</string>
    <string name="text_error_web_servicies_43"></string>
    <string name="text_error_web_servicies_44"></string>
    <string name="text_error_web_servicies_45"></string>
    <string name="text_error_web_servicies_46"></string>
    <string name="text_error_web_servicies_47"></string>
    <string name="text_error_web_servicies_48"></string>
    <string name="text_error_web_servicies_49"></string>
    <string name="text_error_web_servicies_50"></string>
    <string name="text_error_web_servicies_51"></string>
    <string name="text_error_web_servicies_52"></string>
    <string name="text_string_41">Cree, Crea y Explora</string>
    <string name="text_string_42">Para aprovechar todas las funciones</string>
    <string name="text_string_43">disponibles, continúe con nosotros.</string>
    <string name="text_string_44">Continuar con Facebook</string>
    <string name="text_string_45">Continuar con Google</string>
    <string name="text_string_46">O</string>
</resources>