<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_menu_main" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_login_options_fragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_profile_user_fragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile"/>

    </group>

</menu>
