<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_color_2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogoWelcome"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo_artmix"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textViewTitleWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/text_variable_56"
        android:textColor="@color/Grey100"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewDescriptionWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/text_variable_55"
        android:textColor="@color/Grey100"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/grey_100_backfround_with_round_borders"
        android:text="@string/text_variable_51" />

</LinearLayout>
