<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewArtsAdapter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageViewArtistImageProfileArtsAdapter"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/textViewUserNameArtsAdapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_variable_60" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewArtsImageArtsAdapter"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textViewArtsNameArtsAdapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/text_variable_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewArtsDescrptionArtsAdapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_variable_2"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewNumberLikeArtsAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/text_variable_10"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewLikeArtsAdapter"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/ic_heart_outline_grey600_24dp" />

                <Button
                    android:id="@+id/buttonLikeArtsAdapter"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/text_variable_67"
                    android:textAllCaps="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewNomberCommentsArtsAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:text="@string/text_variable_10"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCommentsArtsAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableStart="@mipmap/ic_heart_outline_grey600_24dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_variable_68"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>